# api-docs-example

./: Dockerfile  catalog-info.yaml  mkdocs.yml  openapi.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
catalog-info/: api.yaml  component.yaml
docs/: index.md
src/: api_docs_example.py
tests/: doc_generation_test.py
